# storages

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  canister_ids.json  dfx.json
.github/workflows/: build.yml
candid/: global.did  index_boosted.did  index_event.did  index_friend_request.did  index_group.did  index_notification.did  index_profile.did  index_report.did  index_topic.did  shard_event.did  shard_group.did  shard_profile.did  shard_report.did  shard_shard_group.did  shard_shard_notification.did
scripts/: build.sh  environment_new_deploy.sh  environment_upgrade.sh  local_create.sh  local_deploy.sh  update_all.sh  update_all_shards.sh
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/config/: key_iter.rs  mod.rs  proxies.rs  registry.rs  shard_iter.rs  shard_wasm.rs  shards.rs
src/common/src/helpers/: controller.rs  guards.rs  icp.rs  mod.rs  queries.rs
src/common/src/models/: icp.rs  mod.rs  principals.rs  shard.rs  shards.rs
src/common/src/traits/: cell.rs  filter.rs  id_iter.rs  id_map.rs  index_controller.rs  index_controller_stateful.rs  list.rs  map.rs  mod.rs  shard.rs  shard_client.rs  shard_controller.rs  shard_storage.rs  storage_index.rs
src/global/: Cargo.toml
src/global/src/: clients.rs  guards.rs  id.rs  lib.rs  state.rs
src/global/src/calls/: canisters.rs  history_point.rs  mod.rs  reward_buffer.rs
src/global/src/logic/: mod.rs  reward_buffer.rs
src/global/src/timers/: mod.rs  reward_timer.rs
src/index_boosted/: Cargo.toml
src/index_boosted/src/: aliases.rs  calls.rs  config.rs  controller.rs  state.rs
src/index_event/: Cargo.toml
src/index_event/src/: aliases.rs  calls.rs  config.rs  controller.rs  index.rs  lib.rs  state.rs
src/index_event/src/storage/: id_iter.rs  mod.rs  shard_iter.rs  shard_wasm.rs  state.rs
src/index_friend_request/: Cargo.toml
src/index_friend_request/src/: aliases.rs  calls.rs  lib.rs
src/index_group/: Cargo.toml
src/index_group/src/: aliases.rs  calls.rs  config.rs  controller.rs  index.rs  lib.rs  state.rs
src/index_group/src/storage/: ids.rs
src/index_notification/: Cargo.toml
src/index_notification/src/: aliases.rs  calls.rs
src/index_profile/: Cargo.toml
src/index_profile/src/: aliases.rs  calls.rs  config.rs  controller.rs  index.rs  lib.rs  state.rs
src/index_report/: Cargo.toml
src/index_report/src/: aliases.rs  calls.rs  config.rs  index.rs  lib.rs  state.rs
src/index_topic/: Cargo.toml
src/index_topic/src/: aliases.rs  controller.rs  lib.rs
src/migration/: Cargo.toml
src/migration/src/: canister_methods.rs  event_mapper.rs  group_mapper.rs  index_methods.rs  lib.rs  main.rs  migrate_methods.rs  profile_mapper.rs  proxy_methods.rs  result.rs  utils.rs
src/shard_event/: Cargo.toml
src/shard_event/src/: aliases.rs  calls.rs  controller.rs  lib.rs
src/shard_group/: Cargo.toml
src/shard_group/src/: aliases.rs  calls.rs  controller.rs  lib.rs
src/shard_notification/: Cargo.toml
src/shard_notification/src/: aliases.rs  calls.rs  lib.rs
src/shard_profile/: Cargo.toml
src/shard_profile/src/: aliases.rs  calls.rs  controller.rs  lib.rs
src/shard_report/: Cargo.toml
src/shard_report/src/: aliases.rs  calls.rs  controller.rs  lib.rs  state.rs
src/tests/: Cargo.toml
src/tests/src/: lib.rs  profile.rs  utils.rs
src/tests/src/calls/: mod.rs  profile.rs  utils.rs
(+25 files in other folders)
