[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
candid = "0.10"
serde = { version = "1", features = ["derive"] }

ic-cdk = "0.14"
ic-stable-structures = "0.6"

async-trait = "0.1"
futures = "0.3"

# catalyze-shared = { git = "https://github.com/Catalyze-Software/catalyze-shared" }
catalyze-shared = { path = "../catalyze-shared" }

[profile.release]
lto = true
opt-level = 'z'
