[workspace]
resolver = "2"
members = ["src/*"]

[workspace.dependencies]
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

ic-cdk = "0.16"
ic-stable-structures = "0.6"
ic-ledger-types = "0.13"
ic-cdk-timers = "0.10"

async-trait = "0.1"
futures = "0.3"

catalyze-shared = { git = "https://github.com/Catalyze-Software/catalyze-shared" }

[profile.release]
lto = true
opt-level = 'z'
