[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }

ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }

catalyze-shared = { workspace = true }

derive_builder = "0.20"
