[package]
name = "index_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }

catalyze-shared = { workspace = true }

common = { path = "../common" }
